proxy/envoy.yaml
node:
  id: front-node
  cluster: front-proxy
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    traffic_direction: INBOUND
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_web
          add_user_agent: true
          use_remote_address: true
          generate_request_id: true
          preserve_external_request_id: false
          tracing:
            client_sampling:
              value: 100.0
            verbose: true
          access_log:
          - name: envoy.file_access_log
            typed_config:
              "@type": type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog
              path: "/dev/stdout"
          route_config:
            name: api_route
            virtual_hosts:
            - name: web_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/v1/accounts/"
                route:
                  cluster: account-gw
                decorator:
                  operation: "web.api.v1.account"
              - match:
                  prefix: "/v1/users/"
                route:
                  cluster: user-gw
                decorator:
                  operation: "web.api.v1.user"
          http_filters:
          - name: envoy.router
            typed_config: {}
  clusters:
  - name: account-gw
    connect_timeout: 0.5s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: account-gw
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: account.grpc-lb.svc.cluster.local
                port_value: 9001
  - name: user-gw
    connect_timeout: 0.5s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: user-gw
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: user.grpc-lb.svc.cluster.local
                port_value: 9001
  - name: jaeger
    connect_timeout: 1s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: jaeger
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: jaeger.tracing.svc.cluster.local
                port_value: 9411
tracing:
  http:
    name: envoy.zipkin
    typed_config:
      "@type": type.googleapis.com/envoy.config.trace.v2.ZipkinConfig
      collector_cluster: jaeger
      collector_endpoint: "/api/v2/spans"
      trace_id_128bit: true
      shared_span_context: false
      collector_endpoint_version: HTTP_PROTO # options: HTTP_JSON_V1, HTTP_JSON
admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9000
