proxy/k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grpc-lb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  namespace: grpc-lb
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: proxy
      labels:
        app: frontend
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy-alpine:v1.12.1
        ports:
        - name: web
          containerPort: 8000
        - name: admin
          containerPort: 9000
        volumeMounts:
        - name: envoy-config
          mountPath: /etc/envoy
      volumes:
      - name: envoy-config
        configMap:
          name: envoy-frontend-config
---
apiVersion: v1
kind: Service
metadata:
  name: proxy
  namespace: grpc-lb
spec:
  selector:
    app: frontend
  ports:
  - name: web
    port: 80
    targetPort: 8000
  - name: admin
    port: 9000
    targetPort: 9000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: proxy
    namespace: grpc-lb
    annotations:
      kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: api.grpc.lb
    http:
      paths:
      - path: /
        backend:
          serviceName: proxy
          servicePort: web
